--- a/css/style.css
+++ b/css/style.css
@@ -1482,6 +1482,8 @@ footer .container {
   .container {
     max-width: 1500px;
   }
+  section,
+  footer,
   header {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -1493,71 +1495,8 @@ footer .container {
         -ms-flex-pack: center;
             justify-content: center;
   }
-}
-
-@media (max-width: 1100px) {
-  header {
-    padding: 0 25px;
-  }
-}
-
-@media (max-width: 900px) {
-  header .container .kanan .logo h1 {
-    font-size: 1.2rem;
-  }
-  header .container .kanan nav {
-    display: none;
-  }
-  header .container .kiri .icon {
-    margin-right: 20px;
-    font-size: 1.3rem;
-  }
-  header .container .kiri .profil {
-    margin-left: 0;
-    margin-right: 20px;
-  }
-  header .container .kiri .garis {
-    display: none;
-  }
-  header .container .kiri .auth {
-    display: none;
-  }
-  header .container .kiri .menu {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-  }
-  .containerNavMobile {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-  }
-}
-
-@media (max-width: 600px) {
-  header {
-    padding: 0 10px;
-  }
-}
-
-@media (max-width: 500px) {
-  header .container .kanan .logo img {
-    width: 35px;
-    height: 35px;
-  }
-  header .container .kanan .logo h1 {
-    font-size: 1.1rem;
-    line-height: 20px;
-  }
-}
-
-@media (max-width: 400px) {
-  header .container .kanan .logo img {
-    display: none;
-  }
-  header .container .kiri .icon,
-  header .container .kiri .profil {
-    margin-right: 15px;
+  .containerKerjasama .container {
+    border-top-left-radius: 100px;
   }
 }
 /*# sourceMappingURL=style.css.map */
