--- a/css/style.scss
+++ b/css/style.scss
@@ -1367,128 +1367,15 @@ footer .container {
         max-width: 1500px;
     }
 
+    section,
+    footer,
     header {
         display: flex;
         align-items: center;
         justify-content: center;
     }
-}
 
-@media(max-width:1100px) {
-
-    header {
-        padding: 0 25px;
-    }
-}
-
-
-@media(max-width:900px) {
-
-    header {
-
-        .container {
-
-            .kanan {
-
-                .logo h1 {
-                    font-size: 1.2rem;
-                }
-
-                nav {
-                    display: none;
-                }
-            }
-
-            .kiri {
-
-                .icon {
-                    margin-right: 20px;
-                    font-size: 1.3rem;
-                }
-
-                .profil {
-                    margin-left: 0;
-                    margin-right: 20px;
-                }
-
-                .garis {
-                    display: none;
-                }
-
-                .auth {
-                    display: none;
-                }
-
-                .menu {
-                    display: flex;
-                }
-            }
-
-        }
-    }
-
-    .containerNavMobile {
-        display: flex;
-    }
-
-}
-
-@media(max-width:600px) {
-    header {
-        padding: 0 10px;
-    }
-}
-
-@media(max-width:500px) {
-    header {
-
-        .container {
-
-            .kanan {
-
-                .logo {
-
-                    img {
-                        width: 35px;
-                        height: 35px;
-                    }
-
-                    h1 {
-                        font-size: 1.1rem;
-                        line-height: 20px;
-                    }
-                }
-            }
-        }
-    }
-}
-
-
-
-
-@media(max-width:400px) {
-    header {
-
-        .container {
-
-            .kanan {
-
-                .logo {
-
-                    img {
-                        display: none;
-                    }
-                }
-            }
-
-            .kiri {
-
-
-                .icon,
-                .profil {
-                    margin-right: 15px;
-                }
-            }
-        }
+    .containerKerjasama .container {
+        border-top-left-radius: 100px;
     }
 }
