--- a/css/table/table.scss
+++ b/css/table/table.scss
@@ -19,6 +19,10 @@ table thead th {
     border-bottom: 2px solid var(--hitam-santai);
 }
 
+table tfoot tr th {
+    text-align: left;
+}
+
 
 .table-detail tr th,
 table tfoot tr td,
